2014-09-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.8 released.

2014-09-10  Carl Hetherington  <cth@carlh.net>

	* Fix loading of 1.x films.

	* Fix crash on audio analysis in some cases.

2014-09-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.7 released.

2014-09-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.6 released.

2014-09-09  Carl Hetherington  <cth@carlh.net>

	* Fix missing OS X dependencies.

	* Use a different directory for DCP-o-matic 2
	configuration (not the same as 1.x).

2014-09-08  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.5 released.

	* Fix hidden advanced preferences button in some locales.

2014-09-08  Carl Hetherington  <cth@carlh.net>

	* Fix failure to load Targa files.

2014-09-07  Carl Hetherington  <cth@carlh.net>

	* Put no stretch / no scale in the set of choices for default
	scale to.

	* Fix a few bad fuzzy translations from the preferences dialog.

2014-09-03  Carl Hetherington  <cth@carlh.net>

	* Fix server certificate downloads on OS X (#376).

2014-09-02  Carl Hetherington  <cth@carlh.net>

	* Improve behaviour of batch converter window when it is shrunk (#338).

2014-09-01  Carl Hetherington  <cth@carlh.net>

	* Version 1.73.1 released.

2014-08-31  Carl Hetherington  <cth@carlh.net>

	* Remove configurable CPL <Creator> and use "DCP-o-matic (version) (git)"
	instead.

	* Fix lack of i18n of strings from src/lib/po on OS X.

	* Give a hint when content and container aspect ratios are not
	the same (#392).

	* Add "copy" button to colour conversion presets editor (#399).

	* Allow drag-and-drop of files onto the content list (#395).

2014-08-29  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.4 released.

2014-08-24  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.3 released.

2014-08-24  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.2 released.

2014-08-06  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.1 released.

2014-07-15  Carl Hetherington  <cth@carlh.net>
