@@ -32,6 +32,7 @@ sources = """
           job_manager_view.cc
           job_wrapper.cc
           kdm_dialog.cc
+          make_signer_chain_dialog.cc
           new_film_dialog.cc
           preset_colour_conversion_dialog.cc
           properties_dialog.cc
