@@ -1,3 +1,8 @@
+2014-09-11  Carl Hetherington  <cth@carlh.net>
+
+	* Add option to re-make signing chain with specified organisation,
+	common names etc. (#354)
+
 2014-09-10  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.0.8 released.
